docs-archive/apache-airflow-providers-sftp/6.1.0/_sources/_api/airflow/providers/sftp/operators/sftp/index.rst.txt
airflow.providers.sftp.operators.sftp
=====================================

.. py:module:: airflow.providers.sftp.operators.sftp

.. autoapi-nested-parse::

   This module contains SFTP operator.



Classes
-------

.. autoapisummary::

   airflow.providers.sftp.operators.sftp.SFTPOperator


Module Contents
---------------

.. py:class:: SFTPOperator(*, sftp_hook = None, ssh_conn_id = None, remote_host = None, local_filepath = None, remote_filepath, operation = SFTPOperation.PUT, confirm = True, create_intermediate_dirs = False, concurrency = 1, prefetch = True, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   SFTPOperator for transferring files from remote host to local or vice a versa.

   This operator uses sftp_hook to open an SFTP transport channel that serves as
   the basis for file transfer. All transfer logic is delegated to
   ``SFTPHook.transfer()`` so that both the synchronous and deferrable code paths
   share a single, authoritative implementation.

   :param ssh_conn_id: :ref:`ssh connection id<howto/connection:ssh>`
       from airflow Connections.
   :param sftp_hook: predefined SFTPHook to use.
       Either `sftp_hook` or `ssh_conn_id` needs to be provided.
   :param remote_host: remote host to connect (templated).
       Nullable. If provided, it will replace the `remote_host` which was
       defined in `sftp_hook` or predefined in the connection of `ssh_conn_id`.
   :param local_filepath: local file path or list of local file paths to get or put. (templated)
   :param remote_filepath: remote file path or list of remote file paths to get, put, or delete. (templated)
   :param operation: specify operation ``'get'``, ``'put'``, or ``'delete'``. Defaults to ``'put'``.
   :param confirm: specify if the SFTP operation should be confirmed. Defaults to True.
   :param create_intermediate_dirs: create missing intermediate directories when
       copying from remote to local and vice-versa. Default is False.

       Example: The following task would copy ``file.txt`` to the remote host
       at ``/tmp/tmp1/tmp2/`` while creating ``tmp``,``tmp1`` and ``tmp2`` if they
       don't exist. If the parameter is not passed it would error as the directory
       does not exist. ::

           put_file = SFTPOperator(
               task_id="test_sftp",
               ssh_conn_id="ssh_default",
               local_filepath="/tmp/file.txt",
               remote_filepath="/tmp/tmp1/tmp2/file.txt",
               operation="put",
               create_intermediate_dirs=True,
               dag=dag,
           )

   :param concurrency: number of threads when transferring directories. Each thread opens
       a new SFTP connection. Only applies to directory transfers. (Default: 1)
   :param prefetch: controls whether prefetch is performed on GET transfers. (Default: True)
   :param deferrable: run the operator in deferrable mode. When True, the worker slot is
       freed during the transfer and reclaimed only when the transfer completes.
       Best suited for single large file transfers. For bulk directory transfers involving
       many files, consider using ``async PythonOperator`` with ``SFTPClientPool`` instead,
       which provides true async multiplexing via a single event loop. (Default: False)


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('local_filepath', 'remote_filepath', 'remote_host', 'ssh_conn_id')



   .. py:attribute:: sftp_hook
      :value: None



   .. py:attribute:: ssh_conn_id
      :value: None



   .. py:attribute:: remote_host
      :value: None



   .. py:attribute:: operation


   .. py:attribute:: confirm
      :value: True



   .. py:attribute:: create_intermediate_dirs
      :value: False



   .. py:attribute:: local_filepath
      :value: None



   .. py:attribute:: remote_filepath


   .. py:attribute:: concurrency
      :value: 1



   .. py:attribute:: prefetch
      :value: True



   .. py:attribute:: deferrable


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)

      Handle completion from ``SFTPOperatorTrigger``.

      :param context: Airflow task context
      :param event: trigger result dict with ``status`` and ``message`` keys
      :raises AirflowException: if the trigger reported an error



   .. py:method:: get_openlineage_facets_on_start()

      Return OpenLineage datasets.

      Dataset will have the following structure:
          input: file://<local_host>/path
          output: file://<remote_host>:<remote_port>/path.



